# HIVE

./: .gitignore  CMakeLists.txt  Doxyfile  Ideas.md  README.md
HIVEarchitecture/: CMakeLists.txt
HIVEarchitecture/HIVE/: GameofLife.cpp  GameofLife_downscaled.cpp  GameofLife_minimal.cpp  ram_test.cpp  simpleprograms.cpp
HIVEarchitecture/lib/: ArithmeticLogicUnit.cpp  ArithmeticLogicUnit.hpp  CMakeLists.txt  ConditionalUnit.cpp  ConditionalUnit.hpp  HIVEmind.cpp  SourceDestDecoder.cpp  SourceDestDecoder.hpp
HIVEarchitecture/tests/: RAM_minimal_test.cpp  alu_HIVE_test.cpp  conditional_unit_HIVE_test.cpp
Turing_Complete/: 01-CrudeAwakening.cpp  02-NANDGate.cpp  03-NotGate.cpp  04a-AndGate.cpp  04b-NorGate.cpp  04c-OrGate.cpp  05-AlwaysOn.cpp  06-SecondTick.cpp  07-XorGate.cpp  08a-BiggerOrGate.cpp  08b-BiggerAndGate.cpp  09-XnorGate.cpp  10a-DoubleTrouble.cpp  10b-OddNumberOfSignals.cpp  11a-CountingSignals.cpp  11b-HalfAdder.cpp  11c-DelayedLines.cpp  12a-DoubleTheNumber.cpp  12b-FullAdder.cpp  12c-OddTicks.cpp  13a-BitSwitch.cpp  13b-BitInverter.cpp  14a-ByteOr.cpp  14b-ByteNot.cpp  14c-AddingBytes.cpp  15-InputSelector.cpp  16a-SignedNegator.cpp  16b-TheBus.cpp  16c-SavingGracefully.cpp  17-SavingBytes.cpp  18-OneBitDecoder.cpp  19-ThreeBitDecoder.cpp  20a-LogicEngine.cpp  20b-LittleBox.cpp  20c-Counter.cpp  21a-ArithmeticEngine.cpp  CMakeLists.txt  MagnumOpus.cpp  SourceDestDecoder_test.cpp  circuit.hpp  (+1 more)
base_components/: CMakeLists.txt
base_components/base_components_tests/: byte_maker_test.cpp  byte_neg_test.cpp  byte_not_test.cpp  byte_split_test.cpp  byteaddtest.cpp  bytedoubler.cpp  bytememory_test.cpp  counter_test.cpp  full_add_test.cpp  half_add_test.cpp  program_test.cpp  test_byte_t.cpp  test_byteswitch_in.cpp  test_int8_range.cpp
base_components/lib/: CMakeLists.txt  ToDo.txt  bitmemory.cpp  bitmemory.hpp  byte_adder.cpp  byte_adder.hpp  byte_and.cpp  byte_and.hpp  byte_decoder.cpp  byte_decoder.hpp  byte_maker.cpp  byte_maker.hpp  byte_mux.cpp  byte_mux.hpp  byte_nand.cpp  byte_nand.hpp  byte_neg.cpp  byte_neg.hpp  byte_nor.cpp  byte_nor.hpp  byte_not.cpp  byte_not.hpp  byte_or.cpp  byte_or.hpp  byte_splitter.cpp  byte_splitter.hpp  bytememory.cpp  bytememory.hpp  bytemicrocircuit.hpp  byteoutput.cpp  byteoutput.hpp  byteswitch_in.cpp  byteswitch_in.hpp  counter.cpp  counter.hpp  delay.cpp  delay.hpp  full_adder.cpp  full_adder.hpp  half_adder.cpp  (+41 more)
base_components/tests/: bitmemory_test.cpp  bitwise_op_test.cpp  byte_decoder_test.cpp  counter_test.cpp  hf_adder_test.cpp  mux_test.cpp  split_combine_test.cpp  tog_w.cpp  toggledbit_test.cpp  toggledword_test.cpp  word_wire_test.cpp  wordmemory_test.cpp
base_logic/: CMakeLists.txt
base_logic/base_logic_tests/: TC_Crude_Awakening.cpp  TC_NAND_Gate.cpp
base_logic/lib/: CMakeLists.txt  gate.hpp  nand.cpp  nand.hpp  output.cpp  output.hpp  switch_in.cpp  switch_in.hpp  wire.cpp  wire.hpp
base_logic/tests/: logictest0.cpp  logictest1.cpp
circuits/: CMakeLists.txt
circuits/circuits_tests/: TC_Odd_Ticks.cpp  saving_bits.cpp
circuits/lib/: CMakeLists.txt  circuit.hpp  foo.cpp
derived_components/: CMakeLists.txt
derived_components/lib/: CMakeLists.txt  RAM.cpp  RAM.hpp  arithmetic_logic_unit.cpp  arithmetic_logic_unit.hpp  conditional_unit.cpp  conditional_unit.hpp  display.cpp  display.hpp  register_plus.cpp  register_plus.hpp  source_dest_decoder.cpp  source_dest_decoder.hpp
derived_components/tests/: RAM_test.cpp  arithmetic_logic_unit_test.cpp  conditional_unit_test.cpp  display_test.cpp  register_plus_test.cpp  source_dest_decoder_test.cpp
derived_logic/: CMakeLists.txt
derived_logic/derived_logic_tests/: decoding.cpp  three_input_gates.cpp  two_gate_tests.cpp
derived_logic/lib/: CMakeLists.txt  ToDo.txt  and.cpp  and.hpp  and3.cpp  and3.hpp  fivebitdecoder.cpp  fivebitdecoder.hpp  fourbitdecoder.cpp  fourbitdecoder.hpp  microcircuit.hpp  nor.cpp  nor.hpp  not.cpp  not.hpp  onebitdecoder.cpp  onebitdecoder.hpp  or.cpp  or.hpp  or3.cpp  or3.hpp  threebitdecoder.cpp  threebitdecoder.hpp  xnor.cpp  xnor.hpp  xor.cpp  xor.hpp
derived_logic/tests/: 2gate_test.cpp  3gate_test.cpp  decoding_test.cpp
doc/html/: and3_8hpp_source.html  and_8hpp_source.html  annotated.html  annotated_dup.js  arithmetic__engine_8hpp_source.html  bitmemory_8hpp_source.html  byte__adder_8hpp_source.html  byte__and_8hpp_source.html  byte__maker_8hpp_source.html  byte__mux_8hpp_source.html  byte__nand_8hpp_source.html  byte__neg_8hpp_source.html  byte__nor_8hpp_source.html  byte__not_8hpp_source.html  byte__or_8hpp_source.html  byte__splitter_8hpp_source.html  bytememory_8hpp_source.html  bytemicrocircuit_8hpp_source.html  byteoutput_8hpp_source.html  byteswitch__in_8hpp_source.html  circuit_8hpp_source.html  class_virtual_1_1_and-members.html  class_virtual_1_1_and.html  class_virtual_1_1_and.js  class_virtual_1_1_and3-members.html  class_virtual_1_1_and3.html  class_virtual_1_1_and3.js  class_virtual_1_1_base_gate-members.html  class_virtual_1_1_base_gate.html  class_virtual_1_1_bit_memory-members.html  class_virtual_1_1_bit_memory.html  class_virtual_1_1_bit_memory.js  class_virtual_1_1_byte_adder-members.html  class_virtual_1_1_byte_adder.html  class_virtual_1_1_byte_adder.js  class_virtual_1_1_byte_and-members.html  class_virtual_1_1_byte_and.html  class_virtual_1_1_byte_and.js  class_virtual_1_1_byte_m_u_x-members.html  class_virtual_1_1_byte_m_u_x.html  (+153 more)
doc/html/search/: all_0.js  all_10.js  all_11.js  all_2.js  all_4.js  all_5.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+1 more)
