cmake_minimum_required(VERSION 3.15)

project(TuringComplete)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_compile_options(-Wall -Wpedantic -Wextra)

add_executable(01CrudeAwakening ./01-CrudeAwakening.cpp)
add_executable(02NANDGate ./02-NANDGate.cpp)
add_executable(03NotGate ./03-NotGate.cpp)
add_executable(04aAndGate ./04a-AndGate.cpp)
add_executable(04bNorGate ./04b-NorGate.cpp)
add_executable(04cOrGate ./04c-OrGate.cpp)
add_executable(05AlwaysOn ./05-AlwaysOn.cpp)
add_executable(06SecondTick ./06-SecondTick.cpp)
add_executable(07XorGate ./07-XorGate.cpp)
add_executable(08aBiggerOrGate ./08a-BiggerOrGate.cpp)
add_executable(08bBiggerAndGate ./08b-BiggerAndGate.cpp)
add_executable(09XnorGate ./09-XnorGate.cpp)
add_executable(10aDoubleTrouble ./10a-DoubleTrouble.cpp)
add_executable(10bOddNumberOfSignals ./10b-OddNumberOfSignals.cpp)
add_executable(11aCountingSignals ./11a-CountingSignals.cpp)
add_executable(11bHalfAdder ./11b-HalfAdder.cpp)
add_executable(11cDelayedLines ./11c-DelayedLines.cpp)
add_executable(12aDoubleTheNumber ./12a-DoubleTheNumber.cpp)
add_executable(12bFullAdder ./12b-FullAdder.cpp)
add_executable(12cOddTicks ./12c-OddTicks.cpp)
add_executable(13aBitSwitch ./13a-BitSwitch.cpp)
add_executable(13bBitInverter ./13b-BitInverter.cpp)

target_link_libraries(01CrudeAwakening PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(02NANDGate PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(03NotGate PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(04aAndGate PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(04bNorGate PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(04cOrGate PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(05AlwaysOn PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(06SecondTick PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(07XorGate PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(08aBiggerOrGate PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(08bBiggerAndGate PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(09XnorGate PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(10aDoubleTrouble PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(10bOddNumberOfSignals PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(11aCountingSignals PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(11bHalfAdder PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(11cDelayedLines PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(12aDoubleTheNumber PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(12bFullAdder PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(12cOddTicks PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(13aBitSwitch PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(13bBitInverter PRIVATE basecomponentsLib derivedlogicLib baselogicLib)

add_test(NAME 01CrudeAwakening COMMAND 01CrudeAwakening)
add_test(NAME 02NANDGate COMMAND 02NANDGate)
add_test(NAME 03NotGate COMMAND 03NotGate)
add_test(NAME 04aAndGate COMMAND 04aAndGate)
add_test(NAME 04bNorGate COMMAND 04bNorGate)
add_test(NAME 04cOrGate COMMAND 04cOrGate)
add_test(NAME 05AlwaysOn COMMAND 05AlwaysOn)
add_test(NAME 06SecondTick COMMAND 06SecondTick)
add_test(NAME 07XorGate COMMAND 07XorGate)
add_test(NAME 08aBiggerOrGate COMMAND 08aBiggerOrGate)
add_test(NAME 08bBiggerAndGate COMMAND 08bBiggerAndGate)
add_test(NAME 09XnorGate COMMAND 09XnorGate)
add_test(NAME 10aDoubleTrouble COMMAND 10aDoubleTrouble)
add_test(NAME 10bOddNumberOfSignals COMMAND 10bOddNumberOfSignals)
add_test(NAME 11aCountingSignals COMMAND 11aCountingSignals)
add_test(NAME 11bHalfAdder COMMAND 11bHalfAdder)
add_test(NAME 11cDelayedLines COMMAND 11cDelayedLines)
add_test(NAME 12aDoubleTheNumber COMMAND 12aDoubleTheNumber)
add_test(NAME 12bFullAdder COMMAND 12bFullAdder)
add_test(NAME 12cOddTicks COMMAND 12cOddTicks)
add_test(NAME 13aBitSwitch COMMAND 13aBitSwitch)
add_test(NAME 13bBitInverter COMMAND 13bBitInverter)
