cmake_minimum_required(VERSION 3.15)

project(TuringComplete)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_compile_options(-Wall -Wpedantic -Wextra)

add_executable(01CrudeAwakening ./01-CrudeAwakening.cpp)
add_executable(02NANDGate ./02-NANDGate.cpp)
add_executable(03NotGate ./03-NotGate.cpp)
add_executable(04aAndGate ./04a-AndGate.cpp)
add_executable(04bNorGate ./04b-NorGate.cpp)
add_executable(04cOrGate ./04c-OrGate.cpp)
add_executable(05AlwaysOn ./05-AlwaysOn.cpp)
add_executable(06SecondTick ./06-SecondTick.cpp)
add_executable(07XorGate ./07-XorGate.cpp)
add_executable(08aBiggerOrGate ./08a-BiggerOrGate.cpp)
add_executable(08bBiggerAndGate ./08b-BiggerAndGate.cpp)
add_executable(09XnorGate ./09-XnorGate.cpp)
add_executable(10aDoubleTrouble ./10a-DoubleTrouble.cpp)
add_executable(10bOddNumberOfSignals ./10b-OddNumberOfSignals.cpp)
add_executable(11aCountingSignals ./11a-CountingSignals.cpp)
add_executable(11bHalfAdder ./11b-HalfAdder.cpp)
add_executable(11cDelayedLines ./11c-DelayedLines.cpp)
add_executable(12aDoubleTheNumber ./12a-DoubleTheNumber.cpp)
add_executable(12bFullAdder ./12b-FullAdder.cpp)
add_executable(12cOddTicks ./12c-OddTicks.cpp)
add_executable(13aBitSwitch ./13a-BitSwitch.cpp)
add_executable(13bBitInverter ./13b-BitInverter.cpp)
add_executable(14aByteOr ./14a-ByteOr.cpp)
add_executable(14bByteNot ./14b-ByteNot.cpp)
add_executable(14cAddingBytes ./14c-AddingBytes.cpp)
add_executable(15InputSelector ./15-InputSelector.cpp)
add_executable(16aSignedNegator ./16a-SignedNegator.cpp)
add_executable(16bTheBus ./16b-TheBus.cpp)
add_executable(16cSavingGracefully ./16c-SavingGracefully.cpp)
add_executable(17SavingBytes ./17-SavingBytes.cpp)
add_executable(18OneBitDecoder ./18-OneBitDecoder.cpp)
add_executable(19ThreeBitDecoder ./19-ThreeBitDecoder.cpp)
add_executable(20aLogicEngine ./20a-LogicEngine.cpp)
add_executable(20bLittleBox ./20b-LittleBox.cpp)
add_executable(20cCounter ./20c-Counter.cpp)
add_executable(21aArithmeticEngine ./21a-ArithmeticEngine.cpp)
add_executable(MagnumOpus ./MagnumOpus.cpp)
add_executable(SourceDestDecoderTest ./SourceDestDecoder_test.cpp)

target_link_libraries(01CrudeAwakening PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(02NANDGate PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(03NotGate PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(04aAndGate PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(04bNorGate PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(04cOrGate PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(05AlwaysOn PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(06SecondTick PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(07XorGate PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(08aBiggerOrGate PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(08bBiggerAndGate PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(09XnorGate PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(10aDoubleTrouble PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(10bOddNumberOfSignals PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(11aCountingSignals PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(11bHalfAdder PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(11cDelayedLines PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(12aDoubleTheNumber PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(12bFullAdder PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(12cOddTicks PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(13aBitSwitch PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(13bBitInverter PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(14aByteOr PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(14bByteNot PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(14cAddingBytes PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(15InputSelector PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(16aSignedNegator PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(16bTheBus PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(16cSavingGracefully PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(17SavingBytes PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(18OneBitDecoder PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(19ThreeBitDecoder PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(20aLogicEngine PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(20bLittleBox PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(20cCounter PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(21aArithmeticEngine PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(MagnumOpus PRIVATE derivedcomponentsLib basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(SourceDestDecoderTest PRIVATE derivedcomponentsLib basecomponentsLib derivedlogicLib baselogicLib)

add_test(NAME 01CrudeAwakening COMMAND 01CrudeAwakening)
add_test(NAME 02NANDGate COMMAND 02NANDGate)
add_test(NAME 03NotGate COMMAND 03NotGate)
add_test(NAME 04aAndGate COMMAND 04aAndGate)
add_test(NAME 04bNorGate COMMAND 04bNorGate)
add_test(NAME 04cOrGate COMMAND 04cOrGate)
add_test(NAME 05AlwaysOn COMMAND 05AlwaysOn)
add_test(NAME 06SecondTick COMMAND 06SecondTick)
add_test(NAME 07XorGate COMMAND 07XorGate)
add_test(NAME 08aBiggerOrGate COMMAND 08aBiggerOrGate)
add_test(NAME 08bBiggerAndGate COMMAND 08bBiggerAndGate)
add_test(NAME 09XnorGate COMMAND 09XnorGate)
add_test(NAME 10aDoubleTrouble COMMAND 10aDoubleTrouble)
add_test(NAME 10bOddNumberOfSignals COMMAND 10bOddNumberOfSignals)
add_test(NAME 11aCountingSignals COMMAND 11aCountingSignals)
add_test(NAME 11bHalfAdder COMMAND 11bHalfAdder)
add_test(NAME 11cDelayedLines COMMAND 11cDelayedLines)
add_test(NAME 12aDoubleTheNumber COMMAND 12aDoubleTheNumber)
add_test(NAME 12bFullAdder COMMAND 12bFullAdder)
add_test(NAME 12cOddTicks COMMAND 12cOddTicks)
add_test(NAME 13aBitSwitch COMMAND 13aBitSwitch)
add_test(NAME 13bBitInverter COMMAND 13bBitInverter)
add_test(NAME 14aByteOr COMMAND 14aByteOr)
add_test(NAME 14bByteNot COMMAND 14bByteNot)
add_test(NAME 14cAddingBytes COMMAND 14cAddingBytes)
add_test(NAME 15InputSelector COMMAND 15InputSelector)
add_test(NAME 16aSignedNegator COMMAND 16aSignedNegator)
add_test(NAME 16bTheBus COMMAND 16bTheBus)
add_test(NAME 16cSavingGracefully COMMAND 16cSavingGracefully)
add_test(NAME 17SavingBytes COMMAND 17SavingBytes)
add_test(NAME 18OneBitDecoder COMMAND 18OneBitDecoder)
add_test(NAME 19ThreeBitDecoder COMMAND 19ThreeBitDecoder)
add_test(NAME 20aLogicEngine COMMAND 20aLogicEngine)
add_test(NAME 20bLittleBox COMMAND 20bLittleBox)
add_test(NAME 20cCounter COMMAND 20cCounter)
add_test(NAME 21aArithmeticEngine COMMAND 21aArithmeticEngine)
add_test(NAME MagnumOpus COMMAND MagnumOpus)
add_test(NAME SourceDestDecoderTest COMMAND SourceDestDecoderTest)
