cmake_minimum_required(VERSION 3.15)

project(baseComponents)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_compile_options(-Wall -Wpedantic -Wextra)

add_subdirectory(lib)

add_executable(basecomp_test_half_add base_components_tests/half_add_test.cpp)
add_executable(basecomp_test_full_add base_components_tests/full_add_test.cpp)
add_executable(byte_t_test base_components_tests/test_byte_t.cpp)
add_executable(byte_doubler base_components_tests/bytedoubler.cpp)
add_executable(byte_switch_in_test base_components_tests/test_byteswitch_in.cpp)
add_executable(byte_add_test base_components_tests/byteaddtest.cpp)
add_executable(byte_split_test base_components_tests/byte_split_test.cpp)
add_executable(byte_maker_test base_components_tests/byte_maker_test.cpp)
add_executable(byte_not_test base_components_tests/byte_not_test.cpp)
add_executable(byte_neg_test base_components_tests/byte_neg_test.cpp)
add_executable(bytememory_test base_components_tests/bytememory_test.cpp)
add_executable(counter_test base_components_tests/counter_test.cpp)
add_executable(program_test base_components_tests/program_test.cpp)

add_executable(toggledbit_test tests/toggledbit_test.cpp)
add_executable(bitmemory_test tests/bitmemory_test.cpp)
add_executable(hf_adder_test tests/hf_adder_test.cpp)
add_executable(split_combine_test tests/split_combine_test.cpp)
add_executable(word_wire_test tests/word_wire_test.cpp)
add_executable(toggledword_test tests/toggledword_test.cpp)

target_link_libraries(basecomp_test_half_add PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(basecomp_test_full_add PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(byte_t_test PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(byte_doubler PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(byte_switch_in_test PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(byte_add_test PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(byte_split_test PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(byte_maker_test PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(byte_not_test PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(byte_neg_test PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(bytememory_test PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(counter_test PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(program_test PRIVATE basecomponentsLib derivedlogicLib baselogicLib)

target_link_libraries(toggledbit_test PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(bitmemory_test PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(hf_adder_test PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(split_combine_test PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(word_wire_test PRIVATE basecomponentsLib derivedlogicLib baselogicLib)
target_link_libraries(toggledword_test PRIVATE basecomponentsLib derivedlogicLib baselogicLib)

add_test(NAME toggledbit_testexe COMMAND toggledbit_test)
add_test(NAME bitmemory_testexe COMMAND bitmemory_test)
add_test(NAME hf_adder_testexe COMMAND hf_adder_test)
add_test(NAME split_combine_testexe COMMAND split_combine_test)
add_test(NAME word_wire_testexe COMMAND word_wire_test)
add_test(NAME toggledword_testexe COMMAND toggledword_test)

install(TARGETS basecomp_test_half_add basecomp_test_full_add byte_t_test byte_doubler byte_switch_in_test byte_add_test byte_split_test byte_maker_test byte_not_test byte_neg_test bytememory_test counter_test program_test split_combine_test DESTINATION bin)

